devops-k8s-master/http-spring/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: http-spring
  labels:
    app: http-spring
    owner: jaesay
    tier: backend
spec:
  containers:
    - name: http-spring
      image: jaesay/http-spring
      ports:
        - containerPort: 8080
      livenessProbe:
        httpGet:
          port: 8080
          path: /actuator/health/liveness
        initialDelaySeconds: 10
        periodSeconds: 3
        failureThreshold: 2
      readinessProbe:
        httpGet:
          port: 8080
          path: /actuator/health/readiness
        initialDelaySeconds: 10
        periodSeconds: 3
