devops-k8s-master/http-spring/svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-spring-svc
spec:
  type: LoadBalancer
  selector:
    app: http-spring
  ports:
    - port: 80
      targetPort: 8080
