devops-k8s-master/http-spring/svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-spring-svc
spec:
  type: NodePort
  selector:
    app: http-spring
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30001
