devops-k8s-master/http-spring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-spring-ingress
  annotations:
#    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /hello/ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hello/ingress
            pathType: Exact
            backend:
              service:
                name: http-spring
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: http-spring
spec:
  selector:
    app: http-spring
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-spring
  labels:
    app: http-spring
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-spring
  template:
    metadata:
      labels:
        app: http-spring
    spec:
      containers:
        - name: http-spring
          image: jaesay/http-spring
          ports:
            - containerPort: 8080
